test/files/neg/t3236-neg/IntAnnotation.java
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;

@Retention(RetentionPolicy.RUNTIME)
public @interface IntAnnotation {
    int value();
}
